[gd_scene load_steps=7 format=2]

[ext_resource path="res://grafik/pipe_green_bottom.png" type="Texture" id=1]
[ext_resource path="res://grafik/pipe_green_top.png" type="Texture" id=2]
[ext_resource path="res://Node2D - Vaeg.gd" type="Script" id=3]
[ext_resource path="res://coin.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 171.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 72 )

[node name="Node2D - Vaeg" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D - Top" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Area2D - Top"]
position = Vector2( 0, -92.5 )
scale = Vector2( 1, 2.15625 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Top"]
position = Vector2( 0, -92.5 )
shape = SubResource( 1 )

[node name="Area2D - Bund" type="Area2D" parent="."]
position = Vector2( 0, 250 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Area2D - Bund"]
position = Vector2( 0, 148 )
scale = Vector2( 1, 2.15 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D - Bund"]
position = Vector2( 0, 149.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 153 )
shape = SubResource( 2 )

[node name="PointsStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area2D - Top" to="." method="_on_Area2D__Top_body_entered"]
[connection signal="body_entered" from="Area2D - Bund" to="." method="_on_Area2D__Bund_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
